[gd_scene load_steps=16 format=1]

[ext_resource path="res://rcos/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://remote_connector/icon_selector_dialog.gd" type="Script" id=2]
[ext_resource path="res://rcos/fonts/teko/bitmap/teko-regular-16.fnt" type="BitmapFont" id=3]
[ext_resource path="res://rcos/lib/scroller_container.tscn" type="PackedScene" id=4]
[ext_resource path="res://rcos/lib/scroller_input_area.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.199219, 0.199219, 0.199219, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Theme" id=10]

HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_hilite = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_hilite = null
HScrollBar/styles/grabber = SubResource( 2 )
HScrollBar/styles/grabber_hilite = SubResource( 3 )
HScrollBar/styles/scroll = SubResource( 4 )
HScrollBar/styles/scroll_focus = SubResource( 5 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_hilite = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_hilite = null
VScrollBar/styles/grabber = SubResource( 6 )
VScrollBar/styles/grabber_hilite = SubResource( 7 )
VScrollBar/styles/scroll = SubResource( 8 )
VScrollBar/styles/scroll_focus = SubResource( 9 )

[node name="icon_selector_dialog" type="ColorFrame"]

visibility/self_opacity = 0.9
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 400.0
color = Color( 0, 0, 0, 1 )
script/script = ExtResource( 2 )

[node name="Label1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 199.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Select Icon:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="icons_panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 26.0
margin/right = 182.0
margin/bottom = 350.0
custom_styles/panel = SubResource( 1 )

[node name="icons_scroller" parent="icons_panel" instance=ExtResource( 4 )]

theme/theme = SubResource( 10 )
margin/left = 2.0
margin/top = 2.0
margin/right = 2.0
margin/bottom = 2.0

[node name="icons_list" type="GridContainer" parent="icons_panel/icons_scroller"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4

[node name="scroller_input_area" parent="icons_panel/icons_scroller" instance=ExtResource( 5 )]

[node name="cancel_button" type="Button" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 361.0
margin/right = 18.0
margin/bottom = 386.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false


